--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "build": "parcel build manifest.json --target webext-prod"
   },
   "dependencies": {
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.4.2",
+    "@mui/material": "^5.4.3",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "uikit": "^3.11.1",
-    "uikit-react": "^3.1.3"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@parcel/config-webextension": "2.0.0-nightly.2312",
